# COSC480_Computational_Videography

./: .ycm_extra_conf.py  Blob.cpp  Blob.h  CMakeLists.txt  Camera.cpp  Camera.h  MyLib.cpp  MyLib.h  MyLine.cpp  MyLine.h  MyPlane.cpp  MyPlane.h  Process.cpp  Process.h  VideoProcess.cpp  VideoProcess.h  main.cpp  playground.cpp
Learning_OpenGL/: tutorial01.cpp
tmp/: tmp_main.cpp
